--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>web solution</title>
 </head>
 <body>
+    <!--Header Showcase-->
     <header id="showcase" class="grid">
-        
+        <div class="bg-image"></div>
+        <h1>Welcome to solution</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ullam eius sed sequi iure architecto iste deserunt provident nisi unde.</p>
+        <a href="#section-b" class="btn">Read More</a>
     </header>
+
+    <!--Main Area-->
 </body>
 </html>
