WIP - worked on section-b and added card

--- a/index.html
+++ b/index.html
@@ -16,5 +16,47 @@
     </header>
 
     <!--Main Area-->
+    <main id="main">
+        <!--Section A-->
+        <section id="section-a" class="grid">
+            <div class="content-wrap">
+                <h2 class="cotentent-title">Web & Application Development</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur dolorem iusto aliquam odio asperiores debitis vel eligendi perspiciatis. Cupiditate sed unde vitae eveniet? Possimus, accusantium quasi. Sed fuga, odit eum quae dicta ipsa cupiditate eaque quam nulla? Aliquid, debitis ex!</p>
+            </div>
+        </section>
+
+        <!--Section B-->
+        <section id="section-b" class="grid">
+            <ul>
+                <li>
+                    <div class="card">
+                        <img src="./asset/card1.jpg" alt="">
+                        <div class="card-content">
+                            <h3 class="card-title">Web Development</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima rerum itaque eum sed animi voluptatibus a dolor quam laudantium natus.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <img src="./asset/mobile.jpg" alt="">
+                        <div class="card-content">
+                            <h3 class="card-title">Mobile Applications</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima rerum itaque eum sed animi voluptatibus a dolor quam laudantium natus.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <img src="./asset/marketing.jpg" alt="">
+                        <div class="card-content">
+                            <h3 class="card-title">Tech Marketing</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima rerum itaque eum sed animi voluptatibus a dolor quam laudantium natus.</p>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
