WIP - added section c and section c

--- a/index.html
+++ b/index.html
@@ -57,6 +57,23 @@
                 </li>
             </ul>
         </section>
+
+        <!--Section C -->
+        <section id="section-c" class="grid">
+            <div class="content-wrap">
+              <h2 class="content-title">We handle all of your digital needs</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui perferendis asperiores aliquid hic saepe inventore blanditiis cupiditate ipsa iusto harum!</p>
+            </div>
+        </section>
+
+        <!--Section D -->
+        <section id="section-d" class="grid">
+            <div class="box">
+                <h2 class="content-title">Contact US</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore earum consequuntur, dignissimos porro adipisci dolores culpa cum magni quasi rerum.</p>
+                <p>amoljore7@gmail.com</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
