WIP - completed html part

--- a/index.html
+++ b/index.html
@@ -73,7 +73,17 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore earum consequuntur, dignissimos porro adipisci dolores culpa cum magni quasi rerum.</p>
                 <p>amoljore7@gmail.com</p>
             </div>
+            <div class="box">
+                <h2 class="content-title">About Our Company</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis nihil ad sed quasi blanditiis aut accusantium adipisci deserunt! Deserunt ullam similique praesentium commodi at iure quasi iste, maxime reiciendis possimus.</p>
+            </div>
         </section>
     </main>
+
+    <!--Footer-->
+    <footer id="main-footer" class="grid">
+        <div>Amol Web Tech</div>
+        <div>project by  <a href="https://github.com/amoljore7/30-Grid-CSS-Responsive-Website-Layout---Mobile-First-Design" target="_blank">amoljore</a></div>
+    </footer>
 </body>
 </html>
