WIP - working on styling part of Header section completed

--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" />
     <title>web solution</title>
 </head>
+
 <body>
     <!--Header Showcase-->
     <header id="showcase" class="grid">
         <div class="bg-image"></div>
-        <h1>Welcome to solution</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ullam eius sed sequi iure architecto iste deserunt provident nisi unde.</p>
-        <a href="#section-b" class="btn">Read More</a>
+        <div class="content-wrap">
+            <h1>Welcome to solution</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ullam eius sed sequi iure architecto iste
+                deserunt provident nisi unde.</p>
+            <a href="#section-b" class="btn">Read More</a>
+        </div>
     </header>
 
     <!--Main Area-->
@@ -21,7 +26,10 @@
         <section id="section-a" class="grid">
             <div class="content-wrap">
                 <h2 class="cotentent-title">Web & Application Development</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur dolorem iusto aliquam odio asperiores debitis vel eligendi perspiciatis. Cupiditate sed unde vitae eveniet? Possimus, accusantium quasi. Sed fuga, odit eum quae dicta ipsa cupiditate eaque quam nulla? Aliquid, debitis ex!</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur dolorem iusto aliquam odio
+                    asperiores debitis vel eligendi perspiciatis. Cupiditate sed unde vitae eveniet? Possimus,
+                    accusantium quasi. Sed fuga, odit eum quae dicta ipsa cupiditate eaque quam nulla? Aliquid, debitis
+                    ex!</p>
             </div>
         </section>
 
@@ -33,7 +41,8 @@
                         <img src="./asset/card1.jpg" alt="">
                         <div class="card-content">
                             <h3 class="card-title">Web Development</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima rerum itaque eum sed animi voluptatibus a dolor quam laudantium natus.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima rerum itaque eum sed
+                                animi voluptatibus a dolor quam laudantium natus.</p>
                         </div>
                     </div>
                 </li>
@@ -42,7 +51,8 @@
                         <img src="./asset/mobile.jpg" alt="">
                         <div class="card-content">
                             <h3 class="card-title">Mobile Applications</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima rerum itaque eum sed animi voluptatibus a dolor quam laudantium natus.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima rerum itaque eum sed
+                                animi voluptatibus a dolor quam laudantium natus.</p>
                         </div>
                     </div>
                 </li>
@@ -51,7 +61,8 @@
                         <img src="./asset/marketing.jpg" alt="">
                         <div class="card-content">
                             <h3 class="card-title">Tech Marketing</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima rerum itaque eum sed animi voluptatibus a dolor quam laudantium natus.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima rerum itaque eum sed
+                                animi voluptatibus a dolor quam laudantium natus.</p>
                         </div>
                     </div>
                 </li>
@@ -61,8 +72,9 @@
         <!--Section C -->
         <section id="section-c" class="grid">
             <div class="content-wrap">
-              <h2 class="content-title">We handle all of your digital needs</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui perferendis asperiores aliquid hic saepe inventore blanditiis cupiditate ipsa iusto harum!</p>
+                <h2 class="content-title">We handle all of your digital needs</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui perferendis asperiores aliquid hic saepe
+                    inventore blanditiis cupiditate ipsa iusto harum!</p>
             </div>
         </section>
 
@@ -70,12 +82,15 @@
         <section id="section-d" class="grid">
             <div class="box">
                 <h2 class="content-title">Contact US</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore earum consequuntur, dignissimos porro adipisci dolores culpa cum magni quasi rerum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore earum consequuntur, dignissimos
+                    porro adipisci dolores culpa cum magni quasi rerum.</p>
                 <p>amoljore7@gmail.com</p>
             </div>
             <div class="box">
                 <h2 class="content-title">About Our Company</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis nihil ad sed quasi blanditiis aut accusantium adipisci deserunt! Deserunt ullam similique praesentium commodi at iure quasi iste, maxime reiciendis possimus.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis nihil ad sed quasi blanditiis aut
+                    accusantium adipisci deserunt! Deserunt ullam similique praesentium commodi at iure quasi iste,
+                    maxime reiciendis possimus.</p>
             </div>
         </section>
     </main>
@@ -83,7 +98,10 @@
     <!--Footer-->
     <footer id="main-footer" class="grid">
         <div>Amol Web Tech</div>
-        <div>project by  <a href="https://github.com/amoljore7/30-Grid-CSS-Responsive-Website-Layout---Mobile-First-Design" target="_blank">amoljore</a></div>
+        <div>project by <a
+                href="https://github.com/amoljore7/30-Grid-CSS-Responsive-Website-Layout---Mobile-First-Design"
+                target="_blank">amoljore</a></div>
     </footer>
 </body>
+
 </html>
