WIP - completed responsive UI for all devicess

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="showcase" class="grid">
         <div class="bg-image"></div>
         <div class="content-wrap">
-            <h1>Welcome to solution</h1>
+            <h1>Welcome to gsLab</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni ullam eius sed sequi iure architecto iste
                 deserunt provident nisi unde.</p>
             <a href="#section-b" class="btn">Read More</a>
@@ -26,10 +26,13 @@
         <section id="section-a" class="grid">
             <div class="content-wrap">
                 <h2 class="cotentent-title">Web & Application Development</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur dolorem iusto aliquam odio
-                    asperiores debitis vel eligendi perspiciatis. Cupiditate sed unde vitae eveniet? Possimus,
-                    accusantium quasi. Sed fuga, odit eum quae dicta ipsa cupiditate eaque quam nulla? Aliquid, debitis
-                    ex!</p>
+                <div class="content-text">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur dolorem iusto aliquam odio
+                        asperiores debitis vel eligendi perspiciatis. Cupiditate sed unde vitae eveniet? Possimus,
+                        accusantium quasi. Sed fuga, odit eum quae dicta ipsa cupiditate eaque quam nulla? Aliquid,
+                        debitis
+                        ex!</p>
+                </div>
             </div>
         </section>
 
@@ -85,6 +88,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore earum consequuntur, dignissimos
                     porro adipisci dolores culpa cum magni quasi rerum.</p>
                 <p>amoljore7@gmail.com</p>
+                <span>+91 8421431331</span>
             </div>
             <div class="box">
                 <h2 class="content-title">About Our Company</h2>
@@ -97,10 +101,10 @@
 
     <!--Footer-->
     <footer id="main-footer" class="grid">
-        <div>Amol Web Tech</div>
-        <div>project by <a
+        <div>Amol Tech World</div>
+        <div>project by : <a
                 href="https://github.com/amoljore7/30-Grid-CSS-Responsive-Website-Layout---Mobile-First-Design"
-                target="_blank">amoljore</a></div>
+                target="_blank">Amol Jore</a></div>
     </footer>
 </body>
 
